Support type annotations for KSP, generics improvements and bugfixes

--- a/inject-groovy/build.gradle
+++ b/inject-groovy/build.gradle
@@ -37,7 +37,8 @@ dependencies {
 
 tasks.named("test") {
     exclude '**/*$_closure*'
-
+    forkEvery = 100
+    maxParallelForks = 4
     systemProperty "groovy.attach.groovydoc", true
 }
 
