--- a/inject-kotlin/build.gradle
+++ b/inject-kotlin/build.gradle
@@ -47,6 +47,7 @@ afterEvaluate {
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
+        jvmTarget = "17"
         freeCompilerArgs = ['-Xjvm-default=all']
     }
 }
