Cleanup GraalVM metadata and used Metadata Repository

--- a/core/src/main/resources/META-INF/native-image/io.micronaut/micronaut-core/native-image.properties
+++ b/core/src/main/resources/META-INF/native-image/io.micronaut/micronaut-core/native-image.properties
@@ -21,5 +21,4 @@ Args = --initialize-at-run-time=io.micronaut.core.io.socket.SocketUtils \
         --initialize-at-build-time=io.micronaut.core.convert \
         --initialize-at-build-time=io.micronaut.core.type \
         --initialize-at-build-time=io.micronaut.core.annotation \
-        --features=io.micronaut.core.graal.LoggingFeature \
-        --features=io.micronaut.core.graal.ServiceLoaderFeature
+        --features=io.micronaut.core.io.service.ServiceLoaderFeature
