--- a/test-suite-graal/build.gradle
+++ b/test-suite-graal/build.gradle
@@ -65,6 +65,9 @@ def openGraalModules = [
 
 graalvmNative {
     toolchainDetection = false
+    metadataRepository {
+        enabled = true
+    }
     binaries {
         all {
             openGraalModules.each { module ->
