--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -19,14 +19,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        graalvm: [ 'latest', 'dev' ]
+        graalvm: [ 'latest']
         java: [ '17' ]
-        include:
-          - graalvm: 'dev'
-            java: '19'
-        exclude:
-          - graalvm: 'dev'
-            java: '17'
     steps:
       # https://github.com/actions/virtual-environments/issues/709
       - name: Free disk space
