--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -56,6 +56,7 @@ config:
   bootstrap: Bootstrap Configuration
   jmx:
     title: JMX Support
+  evaluatedExpressions: Micronaut Evaluated Expressions
 aop:
   title: Aspect Oriented Programming
   aroundAdvice: Around Advice
