--- a/settings.gradle
+++ b/settings.gradle
@@ -36,7 +36,7 @@ include "graal"
 include "http"
 include "http-client-core"
 include "http-client"
-include "http-client-javanet"
+include "http-client-jdk"
 include "http-client-tck"
 include "http-netty"
 include "http-server"
@@ -68,12 +68,12 @@ include "websocket"
 include "test-suite"
 include "test-suite-geb"
 include "test-suite-helper"
-include "test-suite-http-client-javanet-ssl"
+include "test-suite-http-client-jdk-ssl"
 include "test-suite-http-client-tck-netty"
-include "test-suite-http-client-tck-javanet"
+include "test-suite-http-client-tck-jdk"
 include "test-suite-javax-inject"
 include "test-suite-jakarta-inject-bean-import"
-include "test-suite-http-server-tck-javanet"
+include "test-suite-http-server-tck-jdk"
 include "test-suite-http-server-tck-netty"
 include "test-suite-kotlin"
 include "test-suite-kotlin-ksp"
