Remove more GraalVM build-time init flags

--- a/context/src/main/resources/META-INF/native-image/io.micronaut/micronaut-context/native-image.properties
+++ b/context/src/main/resources/META-INF/native-image/io.micronaut/micronaut-context/native-image.properties
@@ -14,6 +14,4 @@
 # limitations under the License.
 #
 
-Args = --install-exit-handlers \
-       --initialize-at-build-time=org.reactivestreams,javax.xml \
-       --initialize-at-build-time=com.sun.org.apache.xerces.internal.util,com.sun.org.apache.xerces.internal.impl,jdk.xml.internal,com.sun.xml.internal.stream.util,com.sun.org.apache.xerces.internal.xni,com.sun.org.apache.xerces.internal.utils
+Args = --install-exit-handlers
