--- a/test-suite-kotlin/build.gradle
+++ b/test-suite-kotlin/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     testImplementation libs.jcache
     testImplementation project(':validation')
     testImplementation project(":http-client")
+    testImplementation project(":http-client-jdk")
     testImplementation(libs.micronaut.session)
     testImplementation project(":jackson-databind")
     testImplementation libs.managed.groovy.templates
