extra validation docs to variable

--- a/gradle.properties
+++ b/gradle.properties
@@ -37,6 +37,7 @@ micronautreactorapi=https://micronaut-projects.github.io/micronaut-reactor/lates
 micronautsessionapi=https://micronaut-projects.github.io/micronaut-session/snapshot/api
 micronautspringapi=https://micronaut-projects.github.io/micronaut-spring/latest/api
 micronauttracingapi=https://micronaut-projects.github.io/micronaut-tracing/latest/api
+micronautvalidationdocs=https://micronaut-projects.github.io/micronaut-validation/snapshot/guide/index.html
 hibernateapi=http://docs.jboss.org/hibernate/orm/current/javadocs
 rsapi=http://www.reactive-streams.org/reactive-streams-1.0.3-javadoc
 projectUrl=https://micronaut.io
