docs: move sessions docs url to gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -35,6 +35,7 @@ micronautribbonapi=https://micronaut-projects.github.io/micronaut-netflix/latest
 micronautcacheapi=https://micronaut-projects.github.io/micronaut-cache/latest/api
 micronautreactorapi=https://micronaut-projects.github.io/micronaut-reactor/latest/api
 micronautsessionapi=https://micronaut-projects.github.io/micronaut-session/snapshot/api
+micronautsessiondocs=https://micronaut-projects.github.io/micronaut-session/snapshot/guide
 micronautspringapi=https://micronaut-projects.github.io/micronaut-spring/latest/api
 micronauttracingapi=https://micronaut-projects.github.io/micronaut-tracing/latest/api
 hibernateapi=http://docs.jboss.org/hibernate/orm/current/javadocs
