--- a/.github/workflows/central-sync.yml
+++ b/.github/workflows/central-sync.yml
@@ -24,6 +24,8 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2.3.3
       - name: Publish to Sonatype OSSRH
         env:
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
