Enable gradle-home-cache-cleanup
https://github.com/gradle/gradle-build-action/blob/main/README.md#removing-unused-files-from-gradle-user-home-before-saving-to-cache

--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -39,6 +39,8 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2.4.0
+        with:
+          gradle-home-cache-cleanup: true
       - name: Build with Gradle
         id: gradle
         run: |
