Add back the platform for the server-tck tests (#8898)

--- a/test-suite-http-server-tck-netty/build.gradle
+++ b/test-suite-http-server-tck-netty/build.gradle
@@ -54,6 +54,10 @@ tasks.named("check") { task ->
     }
 }
 
+tasks.named("test") {
+    useJUnitPlatform()
+}
+
 def openGraalModules = [
         "org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk",
         "org.graalvm.nativeimage.builder/com.oracle.svm.core.configure",
