add experimental support for HTTP/3 (#8559)
This PR adds HTTP/3 support for the server and client based on the experimental https://github.com/netty/netty-incubator-codec-http3 . The code is very similar to the existing HTTP/2 stack. The major differences relate to UDP vs TCP.

The HTTP/3 server is activated through a special listener protocol family QUIC (maybe this should be called UDP?). The client is activated by setting the alpn-modes to [h3] (switching to udp based on this property is a bit weird, but ALPN still exists with HTTP/3. eventually, falling back on tcp would be nice).

Server push is currently not supported. The test case for it in particular (netty-based) would need to be rewritten for UDP.

--- a/http-client/build.gradle
+++ b/http-client/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     api project(":http-netty")
     api libs.managed.netty.handler.proxy
 
+    compileOnly libs.managed.netty.incubator.codec.http3
+
     testAnnotationProcessor platform(libs.test.boms.micronaut.validation)
     testAnnotationProcessor (libs.micronaut.validation.processor) {
         exclude group: 'io.micronaut'
