--- a/test-suite-http-server-tck-netty/build.gradle
+++ b/test-suite-http-server-tck-netty/build.gradle
@@ -25,9 +25,9 @@ dependencies {
     testImplementation(projects.httpClient)
     testImplementation(libs.junit.platform.engine)
     testImplementation(libs.managed.logback.classic)
-    implementation platform(libs.test.boms.micronaut.validation)
-    implementation(libs.micronaut.validation) {
-        exclude group: 'io.micronaut'
+    testImplementation(platform(libs.test.boms.micronaut.validation))
+    testImplementation(libs.micronaut.validation) {
+        exclude(group = "io.micronaut")
     }
 
 }
