docs: validation module
Close #8876

--- a/gradle.properties
+++ b/gradle.properties
@@ -38,6 +38,7 @@ micronautsessionapi=https://micronaut-projects.github.io/micronaut-session/snaps
 micronautsessiondocs=https://micronaut-projects.github.io/micronaut-session/snapshot/guide
 micronautspringapi=https://micronaut-projects.github.io/micronaut-spring/latest/api
 micronauttracingapi=https://micronaut-projects.github.io/micronaut-tracing/latest/api
+micronautvalidationdocs=https://micronaut-projects.github.io/micronaut-validation/snapshot/guide/index.html
 hibernateapi=http://docs.jboss.org/hibernate/orm/current/javadocs
 rsapi=http://www.reactive-streams.org/reactive-streams-1.0.3-javadoc
 projectUrl=https://micronaut.io
