--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 projectVersion=4.0.0-SNAPSHOT
 projectGroupId=io.micronaut
-title=Micronaut
 projectDesc=Natively Cloud Native
+title=Micronaut Framework
 githubSlug=micronaut-projects/micronaut-core
 docsRepository=micronaut-projects/micronaut-docs
 testsdir=inject-groovy/src/test/groovy/io/micronaut/docs
