add benchmark for full http stack

--- a/benchmarks/build.gradle
+++ b/benchmarks/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     api project(":inject")
     api project(":inject-java-test")
     api project(":http-server")
+    api project(":http-server-netty")
+    api project(":jackson-databind")
     api project(":router")
     api project(":runtime")
 
