doc: move to whats next to the bottom
- add link to Micronaut Upgrade
- call to action in the top linking to instructions to upgrade for Micronaut 4.

--- a/gradle.properties
+++ b/gradle.properties
@@ -36,6 +36,7 @@ micronautcacheapi=https://micronaut-projects.github.io/micronaut-cache/latest/ap
 micronautreactorapi=https://micronaut-projects.github.io/micronaut-reactor/latest/api
 micronautsessionapi=https://micronaut-projects.github.io/micronaut-session/snapshot/api
 micronautsessiondocs=https://micronaut-projects.github.io/micronaut-session/snapshot/guide
+micronautupgradedocs=https://micronaut-projects.github.io/micronaut-upgrade/snapshot/guide
 micronautspringapi=https://micronaut-projects.github.io/micronaut-spring/latest/api
 micronauttracingapi=https://micronaut-projects.github.io/micronaut-tracing/latest/api
 hibernateapi=http://docs.jboss.org/hibernate/orm/current/javadocs
