docs: validation module (#8957)
Close #8876

--- a/gradle.properties
+++ b/gradle.properties
@@ -40,6 +40,7 @@ micronautsessiondocs=https://micronaut-projects.github.io/micronaut-session/snap
 micronautservletdocs=https://micronaut-projects.github.io/micronaut-servlet/latest/guide/
 micronautspringapi=https://micronaut-projects.github.io/micronaut-spring/latest/api
 micronauttracingapi=https://micronaut-projects.github.io/micronaut-tracing/latest/api
+micronautvalidationdocs=https://micronaut-projects.github.io/micronaut-validation/snapshot/guide/index.html
 hibernateapi=http://docs.jboss.org/hibernate/orm/current/javadocs
 rsapi=http://www.reactive-streams.org/reactive-streams-1.0.3-javadoc
 projectUrl=https://micronaut.io
