--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -47,6 +47,7 @@ config:
   environments: The Environment
   propertySource: Externalized Configuration with PropertySources
   valueAnnotation: Configuration Injection
+  evaluatedExpressions: Expression Language
   configurationProperties: Configuration Properties
   customTypeConverter: Custom Type Converters
   eachProperty: Using @EachProperty to Drive Configuration
@@ -56,7 +57,6 @@ config:
   bootstrap: Bootstrap Configuration
   jmx:
     title: JMX Support
-  evaluatedExpressions: Micronaut Evaluated Expressions
 aop:
   title: Aspect Oriented Programming
   aroundAdvice: Around Advice
