--- a/http-netty/build.gradle
+++ b/http-netty/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 
     testImplementation project(":runtime")
     testImplementation project(":websocket")
+    testImplementation project(":jackson-databind")
 }
 
 spotless {
