Make Kotlin and Kotlin coroutines versions managed.
closes #8991

--- a/http-server-netty/build.gradle
+++ b/http-server-netty/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation libs.managed.reactor
     compileOnly project(":jackson-databind")
     compileOnly project(":websocket")
-    compileOnly libs.kotlin.stdlib
+    compileOnly libs.managed.kotlin.stdlib
     compileOnly libs.managed.netty.transport.native.unix.common
     compileOnly libs.managed.netty.incubator.codec.http3
 
