--- a/aop/build.gradle
+++ b/aop/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     api project(':inject')
     api project(':core')
     compileOnly project(':core-reactive')
-    compileOnly libs.kotlinx.coroutines.core
+    compileOnly libs.managed.kotlinx.coroutines.core
 }
 
 tasks.named("compileKotlin") {
