--- a/http-server/build.gradle
+++ b/http-server/build.gradle
@@ -13,8 +13,8 @@ dependencies {
 
     compileOnly project(":websocket")
     compileOnly project(":jackson-databind")
-    compileOnly libs.kotlinx.coroutines.core
-    compileOnly libs.kotlinx.coroutines.reactor
+    compileOnly libs.managed.kotlinx.coroutines.core
+    compileOnly libs.managed.kotlinx.coroutines.reactor
     compileOnly(libs.micronaut.runtime.groovy)
     implementation libs.managed.reactor
     annotationProcessor project(":inject-java")
