--- a/inject-kotlin/build.gradle
+++ b/inject-kotlin/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 
     testImplementation project(":jackson-databind")
     testImplementation project(":inject-kotlin-test")
-    testImplementation libs.kotlin.stdlib
+    testImplementation libs.managed.kotlin.stdlib
     testImplementation project(':http-client')
     testImplementation libs.managed.jackson.annotations
     testImplementation libs.managed.reactor
@@ -42,9 +42,9 @@ dependencies {
     testImplementation libs.javax.persistence
     testImplementation project(":runtime")
     testImplementation(libs.neo4j.bolt)
-    testImplementation libs.kotlinx.coroutines.core
-    testImplementation libs.kotlinx.coroutines.jdk8
-    testImplementation libs.kotlinx.coroutines.rx2
+    testImplementation libs.managed.kotlinx.coroutines.core
+    testImplementation libs.managed.kotlinx.coroutines.jdk8
+    testImplementation libs.managed.kotlinx.coroutines.rx2
     testImplementation (libs.micronaut.test.junit5) {
         exclude group: 'io.micronaut'
     }
