--- a/test-suite-groovy/build.gradle
+++ b/test-suite-groovy/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     testRuntimeOnly libs.bcpkix
 
     testImplementation libs.managed.reactor
+    testImplementation(libs.awaitility)
 }
 
 //compileTestGroovy.groovyOptions.forkOptions.jvmArgs = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
