--- a/test-suite-kotlin/build.gradle
+++ b/test-suite-kotlin/build.gradle
@@ -24,22 +24,22 @@ repositories {
 }
 
 dependencies {
-    api libs.kotlin.stdlib
-    api libs.kotlin.reflect
-    api libs.kotlinx.coroutines.core
-    api libs.kotlinx.coroutines.jdk8
-    api libs.kotlinx.coroutines.rx2
+    api libs.managed.kotlin.stdlib
+    api libs.managed.kotlin.reflect
+    api libs.managed.kotlinx.coroutines.core
+    api libs.managed.kotlinx.coroutines.jdk8
+    api libs.managed.kotlinx.coroutines.rx2
     api project(':http-server-netty')
     api project(':http-client')
     api project(':runtime')
 
     testImplementation project(":context")
-    testImplementation libs.kotlin.test
-    testImplementation libs.kotlinx.coroutines.core
-    testImplementation libs.kotlinx.coroutines.rx2
-    testImplementation libs.kotlinx.coroutines.slf4j
-    testImplementation libs.kotlinx.coroutines.reactor
-    testImplementation libs.kotlinx.coroutines.reactive
+    testImplementation libs.managed.kotlin.test
+    testImplementation libs.managed.kotlinx.coroutines.core
+    testImplementation libs.managed.kotlinx.coroutines.rx2
+    testImplementation libs.managed.kotlinx.coroutines.slf4j
+    testImplementation libs.managed.kotlinx.coroutines.reactor
+    testImplementation libs.managed.kotlinx.coroutines.reactive
 
     // Adding these for now since micronaut-test isnt resolving correctly ... probably need to upgrade gradle there too
     testImplementation libs.junit.jupiter.api
@@ -89,7 +89,7 @@ dependencies {
 configurations.testRuntimeClasspath {
     resolutionStrategy.eachDependency {
         if (it.requested.group == 'org.jetbrains.kotlin') {
-            it.useVersion(libs.versions.kotlin.asProvider().get())
+            it.useVersion(libs.versions.managed.kotlin.asProvider().get())
         }
     }
 }
