--- a/management/build.gradle
+++ b/management/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     testRuntimeOnly libs.h2
     testRuntimeOnly libs.mysql.driver
 
-    compileOnly libs.managed.logback.classic
+    compileOnly libs.logback.classic
     compileOnly libs.log4j
 
 }
