--- a/http-client/build.gradle
+++ b/http-client/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     testImplementation project(":jackson-databind")
     testImplementation project(":http-server-netty")
     testImplementation libs.wiremock
-    testImplementation libs.managed.logback.classic
+    testImplementation libs.logback.classic
 
     if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_15)) {
         testImplementation libs.bcpkix
