--- a/http/build.gradle
+++ b/http/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     testImplementation project(":jackson-databind")
     testImplementation project(":inject")
     testImplementation project(":runtime")
-    testImplementation(libs.managed.logback.classic)
+    testImplementation(libs.logback.classic)
 }
 
 tasks.named("compileKotlin") {
