--- a/test-suite/build.gradle
+++ b/test-suite/build.gradle
@@ -89,7 +89,7 @@ dependencies {
     testRuntimeOnly(platform(libs.test.boms.micronaut.aws))
     testRuntimeOnly libs.h2
     testRuntimeOnly libs.junit.vintage
-    testRuntimeOnly libs.managed.logback.classic
+    testRuntimeOnly libs.logback.classic
     testRuntimeOnly libs.aws.java.sdk.lambda
 
     // needed for HTTP/2 tests
@@ -103,7 +103,7 @@ dependencies {
     }
     testImplementation libs.managed.netty.incubator.codec.http3
     testImplementation libs.logbook.netty
-    testImplementation libs.managed.logback.classic
+    testImplementation libs.logback.classic
 
     if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_15)) {
         testImplementation libs.bcpkix
