--- a/settings.gradle
+++ b/settings.gradle
@@ -65,6 +65,7 @@ include "websocket"
 
 // test suites
 include "test-suite"
+include "test-suite-jpms"
 include "test-suite-geb"
 include "test-suite-helper"
 include "test-suite-http-client-jdk-ssl"
