added indicator factory, added config, and updated manual

--- a/http-client-core/build.gradle
+++ b/http-client-core/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation libs.managed.reactor
 
     api project(":runtime")
+    api project(":management")
 
     compileOnly libs.kotlin.stdlib
 }
