changed to compileonly and added additional config requirement in indicator

--- a/management/build.gradle
+++ b/management/build.gradle
@@ -12,7 +12,7 @@ dependencies {
         exclude module:'micronaut-inject'
         exclude module:'micronaut-bom'
     }
-    implementation project(":http-client-core")
+    compileOnly project(":http-client-core")
 
     implementation libs.managed.reactor
 
