--- a/http-netty/build.gradle
+++ b/http-netty/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     compileOnly libs.graal
     compileOnly libs.managed.netty.transport.native.epoll
     compileOnly libs.managed.netty.transport.native.kqueue
+    compileOnly libs.managed.netty.transport.native.iouring
     compileOnly project(":websocket")
 
     api project(":http")
