use Milestone versions (#9085)
* use Milestone versions

* Fix management test

H2 version was updated in the micronaut-sql bom

This commit aligns those versions, and fixes the test

* Use validation M3

---------

Co-authored-by: Tim Yates <tim.yates@gmail.com>

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ geb = "7.0"
 gorm = "7.3.2"
 # be sure to update graal version in gradle.properties as well
 graal-svm = "22.3.1"
-h2 = "2.1.210"
+h2 = "2.1.214"
 hibernate = "5.5.9.Final"
 hibernate-validator = "6.1.6.Final"
 htmlSanityCheck = "1.1.6"
@@ -36,13 +36,13 @@ managed-logback = "1.4.6"
 logbook-netty = "2.14.0"
 log4j = "2.19.0"
 micronaut-aws = "3.9.2"
-micronaut-groovy = "4.0.0-SNAPSHOT"
-micronaut-session = "1.0.0-SNAPSHOT"
-micronaut-sql = "4.7.2"
-micronaut-test = "4.0.0-SNAPSHOT"
-micronaut-serde = "2.0.0-SNAPSHOT"
+micronaut-groovy = "4.0.0-M1"
+micronaut-session = "4.0.0-M1"
+micronaut-sql = "5.0.0-M3"
+micronaut-test = "4.0.0-M1"
+micronaut-serde = "2.0.0-M1"
 micronaut-tracing = "5.0.0-SNAPSHOT"
-micronaut-validation = "4.0.0-SNAPSHOT"
+micronaut-validation = "4.0.0-M3"
 micrometer = "1.10.2"
 neo4j-java-driver = "1.4.5"
 selenium = "4.7.2"
