--- a/management/build.gradle
+++ b/management/build.gradle
@@ -12,6 +12,7 @@ dependencies {
         exclude module:'micronaut-inject'
         exclude module:'micronaut-bom'
     }
+    compileOnly project(":http-client-core")
 
     implementation libs.managed.reactor
 
