--- a/http-server-netty/build.gradle
+++ b/http-server-netty/build.gradle
@@ -14,6 +14,7 @@ micronautBuild {
 tasks.named("test") {
     systemProperty("io.netty.leakDetection.level", "paranoid")
     systemProperty("io.netty.customResourceLeakDetector", "io.micronaut.http.server.netty.fuzzing.BufferLeakDetection")
+    systemProperty("io.netty.leakDetection.targetRecords", "100")
     maxHeapSize("1G")
 }
 
