--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -53,6 +53,7 @@ managed-h2 = "1.4.200"
 managed-hystrix = "1.5.18"
 managed-jakarta-annotation-api = "2.1.1"
 managed-jackson = "2.15.0"
+managed-jackson-databind = "2.15.0" # unused, kept for compatibility
 managed-javax-annotation-api = "1.3.2"
 managed-jcache = "1.1.1"
 managed-jna = "5.12.1"
