Remove managed logging dependencies
These are already defined in `micronaut-logging`. This will fix the
warnings about duplicate logging entries when building the platform.

--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-base.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.convention-base.gradle
@@ -89,7 +89,7 @@ dependencies {
         transitive = false
     }
 
-    api libs.managed.slf4j.api
+    api libs.slf4j.api
     compileOnly libs.caffeine
     compileOnly libs.bundles.asm
 
